k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cookshare
  labels:
    app.kubernetes.io/part-of: cookshare
